Fix: swagger UI should have authorazation
